--- a/index.html
+++ b/index.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hyeon-Gyu Kim's Homepage</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            margin: 10px 0;
+            text-align: center;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+        }
+        .content {
+            padding: 20px;
+            max-width: 800px;
+            margin: auto;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #333;
+            color: #fff;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-  <p>Hello, World!</p>
+
+    <header>
+        <h1>Hyeon-Gyu Kim's Homepage</h1>
+    </header>
+
+    <nav>
+        <a href="index.html">Homepage</a>
+        <a href="cv.html">CV</a>
+        <a href="research.html">Research</a>
+    </nav>
+
+    <div class="content">
+        <h2>Welcome to My Homepage</h2>
+        <p>Hello, my name is Hyeon-Gyu Kim. I am a researcher focused on [Your Research Field or Interests].</p>
+        <p>This website provides an overview of my professional background, my current and past research projects, and other academic achievements.</p>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Hyeon-Gyu Kim. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
